fixed styling bugs from previous commit that looked bad on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,9 +15,7 @@
  */
 
 .article-actions {
-  margin-top: 1rem;
-}
-
-#delete-article-btn {
-  margin-left: 35.35%;
+  border-top: 1px solid #eaeaea;
+  padding-top: 5px;
+  margin-bottom: 1rem;
 }
